--- a/lang/vi.json
+++ b/lang/vi.json
@@ -70,5 +70,15 @@
     "Whoops!": "Rất tiếc!",
     "You are receiving this email because we received a password reset request for your account.": "Bạn nhận được email này vì chúng tôi đã nhận được yêu cầu đặt lại mật khẩu cho tài khoản của bạn.",
     "You're logged in!": "Bạn đã đăng nhập!",
-    "Your email address is unverified.": "Địa chỉ email của bạn chưa được xác minh."
+    "Your email address is unverified.": "Địa chỉ email của bạn chưa được xác minh.",
+    "Edit user": "Chỉnh sửa người dùng",
+    "Delete user": "Xóa người dùng",
+    "Create user": "Tạo mới người dùng",
+    "Show user": "Xem người dùng",
+    "First name": "Tên",
+    "Last name": "Họ",
+    "Edit task": "Chỉnh sửa  công việc",
+    "Delete task": "Xóa công việc",
+    "Create task": "Tạo mới công việc",
+    "Show task": "Xem công việc"
 }
