--- a/lang/vi.json
+++ b/lang/vi.json
@@ -80,5 +80,8 @@
     "Edit task": "Chỉnh sửa  công việc",
     "Delete task": "Xóa công việc",
     "Create task": "Tạo mới công việc",
-    "Show task": "Xem công việc"
+    "Show task": "Xem công việc",
+    "Task list": "Danh sách công việc",
+    "Task": "Công việc",
+    "Username": "Tài khoản"
 }
