--- a/lang/vi.json
+++ b/lang/vi.json
@@ -83,5 +83,9 @@
     "Show task": "Xem công việc",
     "Task list": "Danh sách công việc",
     "Task": "Công việc",
-    "Username": "Tài khoản"
+    "Username": "Tài khoản",
+    "Created at": "Thời gian tạo",
+    "Action": "Hành động",
+    "Deadline": "Thời hạn",
+    "Content": "Nội dung"
 }
